image align fix

--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,8 @@ body{
 }
 img{
     width: 25rem;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
